...
  {
    'nombre': 'Gestión de Tipos de Servicio',
    'icon': Icons.category,
    'screen': TiposServicioScreen(),
  },
    {
    'nombre': 'Gestión de Paquetes Turísticos',
    'icon': Icons.tour,
    'screen': PaquetesTuristicosScreen(),
  },
  //agrego mas
  {
    'nombre': 'Gestión de Reservas',
...
